--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "json-server": "^0.16.3",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
