--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "concurrently": "^6.2.0",
+    "json-server": "^0.16.3",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "json-server": "^0.16.3",
-    "multer": "^1.4.2",
-    "nodemon": "^2.0.7"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
