--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.0",
     "@material-ui/core": "^4.11.4",
+    "@reduxjs/toolkit": "^1.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "concurrently": "^6.2.0",
     "json-server": "^0.16.3",
+    "jss-rtl": "^0.3.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
