--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -11,13 +11,22 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "concurrently": "^6.2.0",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
+    "htmr": "^1.0.0",
+    "immutable": "^4.0.0-rc.12",
     "joi": "^17.4.0",
     "json-server": "^0.16.3",
     "jss-rtl": "^0.3.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
+    "notistack": "^1.0.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
