--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -27,8 +27,11 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-html-parser": "^2.0.2",
+    "react-image-zoom": "^1.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
