--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -17,6 +17,7 @@
     "html-to-draftjs": "^1.5.0",
     "htmr": "^1.0.0",
     "immutable": "^4.0.0-rc.12",
+    "jalali-react-datepicker": "^1.2.1",
     "joi": "^17.4.0",
     "json-server": "^0.16.3",
     "jss-rtl": "^0.3.0",
@@ -28,9 +29,11 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-html-parser": "^2.0.2",
     "react-image-zoom": "^1.3.1",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
