--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -17,14 +17,15 @@
     "html-to-draftjs": "^1.5.0",
     "htmr": "^1.0.0",
     "immutable": "^4.0.0-rc.12",
-    "jalali-react-datepicker": "^1.2.1",
     "joi": "^17.4.0",
     "json-server": "^0.16.3",
     "jss-rtl": "^0.3.0",
+    "moment-jalaali": "^0.9.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "notistack": "^1.0.9",
     "react": "^17.0.2",
+    "react-datepicker2": "^3.3.13",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-html-parser": "^2.0.2",
