--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -14,6 +14,7 @@
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draftjs-to-html": "^0.9.1",
+    "express": "^4.17.1",
     "html-to-draftjs": "^1.5.0",
     "htmr": "^1.0.0",
     "immutable": "^4.0.0-rc.12",
