--- a/online-shop/package.json
+++ b/online-shop/package.json
@@ -42,7 +42,8 @@
   "scripts": {
     "json-server": "json-server --watch ./db.json --port 3004",
     "node-server": "node server",
-    "start": "concurrently --kill-others \"react-scripts start\" \"npm run json-server\" \"npm run node-server\"",
+    "start":"react-scripts start" ,
+    // "concurrently --kill-others \"react-scripts start\" \"npm run json-server\" \"npm run node-server\""
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
